ENG-28767: simplify and move tests to volt-testcontainer/src/test (#64)
* simplify and move tests to volt-testcontainer/src/test, convert to Junit5